--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="./js-developer-pokedex/global.css">
-    <link rel="stylesheet" href="./js-developer-pokedex/pokedex.css">
-    <link rel="stylesheet" href="./js-developer-pokedex/pokemon.css">
+    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./pokedex.css">
+    <link rel="stylesheet" href="./pokemon.css">
 </head>
 
 <body>
