--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
 
     <!-- Nosso JS -->
-    <script src=".pokemon-model.js"></script>
-    <script src=".poke-api.js"></script>
-    <script src=".main.js"></script>
+    <script src="./pokemon-model.js"></script>
+    <script src="./poke-api.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
